[package]
name = "load-striker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
reqwest = "0.11"
futures = "0.3"
rand = "0.8"
