[package]
name = "load-striker"
version = "0.1.2"
edition = "2021"
authors = ["Dima Dermanskyi vindimon@gmail.com"]
license = "MIT OR Apache-2.0"
description = "HTTP load testing tool"
readme = "README.md"
homepage = "https://github.com/thereisnospoon/load-striker"
repository = "https://github.com/thereisnospoon/load-striker"
keywords = ["http", "bench", "load"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
reqwest = "0.11"
futures = "0.3"
rand = "0.8"
